--- a/app.wxss
+++ b/app.wxss
@@ -1,10 +1,53 @@
 /**app.wxss**/
+
+view {
+  box-sizing: border-box;
+}
+
 .container {
   height: 100%;
+  background: #f3f3f3;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: space-between;
-  padding: 200rpx 0;
+  justify-content: center;
+  padding: 12rpx;
   box-sizing: border-box;
 } 
+.section {
+  width: 100%;
+  display: flex;
+  background: white;
+  align-items: center;
+  justify-content: center;
+  padding: 12rpx;
+  box-sizing: border-box;
+  margin-bottom: 12rpx;
+  border-radius: 12rpx;
+  flex-direction: column;
+}
+
+.search {
+  height: 60rpx;
+  width: 100%;
+  background-color: #f3f3f3;
+  border-radius: 30rpx;
+  text-align: left;
+  padding-left: 48rpx;
+  font-size: 24rpx;
+}
+.search-placeholder {
+  font-size: 24rpx;
+  line-height: 60rpx;
+  color: rgb(147,147,147);
+}
+
+.horiz-flex {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  justify-content: space-between;
+}
+
+.marginTop {
+  margin-top: 12px;
+}
