--- a/pages/search/search.wxml
+++ b/pages/search/search.wxml
@@ -2,7 +2,7 @@
 <view class="container">
   <view class="section">
     <view class="horiz-flex">
-      <input placeholder="请输入商家名称" class="search" focus />
+      <input placeholder="搜索" class="search" focus />
       <text class="cancel" bindtap="onCancel">取消</text>
     </view>
   </view>
