--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -20,6 +20,19 @@
   margin-top: 200px;
 }
 
+.slogan {
+  background-color: #fb773e;
+  color: #ffffff;
+  line-height: 60px;
+  font-size: 24px;
+  font-weight: 700;
+  transition: transform 0.3s;
+}
+
+.slogan-hover {
+  transform: scale(0.95);
+}
+
 .kingkong {
   display: flex;
   width: 120rpx;
@@ -29,4 +42,51 @@
   font-size: 24rpx;
   text-align: center;
   color: #666;
+}
+
+.summary {
+  border-bottom: 1px solid #f3f3f3;
+  padding: 40rpx 20rpx;
+}
+.summary-hover {
+  background-color: #f3f3f3;
+}
+.summary-img {
+  height: 150rpx;
+  border-radius: 4px;
+  flex-basis: 150rpx;
+}
+.summary-content {
+  width: 450rpx;
+  height: 150rpx;
+  border-radius: 3px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.summary-content--title {
+  width: 100%;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  font-size: 32rpx;
+  white-space: nowrap;
+  font-weight: 500;
+  margin-bottom: 16rpx;
+}
+.summary-content--text {
+  display: -webkit-box;
+  width: 100%;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  font-size: 30rpx;
+  white-space: normal;
+  color: #999999;
+  word-wrap: break-word;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+}
+.summary-call {
+  height: 50rpx;
+  width: 50rpx;
+  border-radius: 3px;
 }
